--- a/.github/workflows/leetcode_sync.yml
+++ b/.github/workflows/leetcode_sync.yml
@@ -14,8 +14,8 @@ jobs:
         uses: joshcai/leetcode-sync@v1.5
         with:
           github-token: ${{ github.token }}
-          leetcode-csrf-token: ${{ secrets.LEETCODE_CSRF_TOKEN }}
+          leetcode-csrf-token: ${{ secrets.CSRFTOKEN }}
           leetcode-session: ${{ secrets.LEETCODE_SESSION }}
-          destination-folder: my-folder
+          destination-folder: solutions
           verbose: true
           commit-header: '[LeetCode Sync]'
